--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 fastapi
 uvicorn[standard]
-huggingface_hub==0.31.2
 langchain_community==0.3.24
 langchain_core==0.3.60
 langchain_ollama==0.3.3
-pillow==11.2.1
+numpy==2.2.6
+pinecone==6.0.2
 pydantic==2.11.4
+python-dotenv==1.1.0
 requests==2.32.3
 scikit_learn==1.6.1
 beautifulsoup4==4.13.4
