--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,6 @@ scikit_learn==1.6.1
 beautifulsoup4==4.13.4
 sentence-transformers==4.1.0
 minio==7.2.15
+langchain-anthropic==0.3.13
+langchain-google-genai==2.1.4
+langchain-openai==0.3.18
